--- a/spring-cloud-stream-dapr/spring-cloud-stream-binder-dapr-http/pom.xml
+++ b/spring-cloud-stream-dapr/spring-cloud-stream-binder-dapr-http/pom.xml
@@ -17,6 +17,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.dapr</groupId>
+			<!-- <artifactId>dapr-sdk-springboot-http</artifactId> -->
 			<artifactId>dapr-sdk-springboot</artifactId>
 			<exclusions>
 				<exclusion>
