fix 404 when using http

--- a/spring-cloud-stream-dapr/spring-cloud-stream-binder-dapr-grpc/pom.xml
+++ b/spring-cloud-stream-dapr/spring-cloud-stream-binder-dapr-grpc/pom.xml
@@ -16,11 +16,11 @@
 		<dependency>
 			<groupId>io.dapr</groupId>
 			<!-- <artifactId>dapr-sdk-springboot-grpc</artifactId> -->
-			<artifactId>dapr-sdk-springboot</artifactId>
+			<artifactId>dapr-sdk-springboot-grpc</artifactId>
 			<exclusions>
 				<exclusion>
 					<groupId>io.dapr</groupId>
-					<artifactId>dapr-sdk-actors</artifactId>
+					<artifactId>dapr-sdk-actors-grpc</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
